wdn/templates_3.0/css/ie.css
body.liquid #wdn_wrapper,
#header { zoom:1; }
body.popup #header { left:0; }

#titlegraphic h1 {
    top:10px;	
}
body.popup #titlegraphic { zoom:1; }

#tooltabs {
	top:-11px;	
}

#toolbarcontent .toolbar_plugin h3 {
	background-color:#ac0302;
	margin-bottom:20px;
}

#maincontent div.zenboxsolid h3, #maincontent div.zenboxfixed h3, #maincontent div.zenboxfeature h3, #maincontent div.zenbox h3,
#maincontent div.zenboxsolid.bright h3, #maincontent div.zenboxfixed.bright h3, #maincontent div.zenboxfeature.bright h3, #maincontent div.zenbox.bright h3 {
    background-color:#E8E81C;
}

#maincontent div.zenboxsolid.cool h3, #maincontent div.zenboxfixed.cool h3, #maincontent div.zenboxfeature.cool h3, #maincontent div.zenbox.cool h3 {
    background-color:#3E83C9;
}
#maincontent div.zenboxsolid.energetic h3, #maincontent div.zenboxfixed.energetic h3, #maincontent div.zenboxfeature.energetic h3, #maincontent div.zenbox.energetic h3 {
    background-color:#FA6520;
}
#maincontent div.zenboxsolid.soothing h3, #maincontent div.zenboxfixed.soothing h3, #maincontent div.zenboxfeature.soothing h3, #maincontent div.zenbox.soothing h3 {
    background-color:#028A02;
}
#maincontent div.zenboxsolid.neutral h3, #maincontent div.zenboxfixed.neutral h3, #maincontent div.zenboxfeature.neutral h3, #maincontent div.zenbox.neutral h3 {
    background-color:#3D3D3D;
}
#maincontent div.zenboxsolid.primary h3, #maincontent div.zenboxfixed.primary h3, #maincontent div.zenboxfeature.primary h3, #maincontent div.zenbox.primary h3 {
    background-color:#AC0302;
}
#maincontent form.cool fieldset legend {
    margin: -13px 0 0 -7px !important;
}
#maincontent form.cool fieldset fieldset legend {
	margin: 4px 0 !important;
    top: 0 !important;
}
#maincontent form.compact fieldset legend {
    margin: -5px 0 0 -7px !important;
}
ul#wdn_tool_links li {
	float:left;
	width:20px;
}
#wdn_tool_links a {
	display:block;
}

/** CSS3 Workarounds for #navigation **/
#navigation > ul > li.start  {
    clear:left;
}
#navigation > ul > li.start > a  {
    border-left:none;
}
#navigation > ul > li.end > a {
    border-right:none;
}
#navigation > ul > li.mid-bar > a {
    border-top:1px solid #870d0c;
}

#navigation > ul > li ul {
	left:0;
}
#navigation > ul > li.start ul {
    border-left-color:#c9c9c9;
    margin-left:0;
}
#navigation > ul > li.end ul {
    border-right:1px solid #c9c9c9 !important;
    margin-right:0;
}
#navigation > ul > li ~ li.empty ~ li.empty.end ul {
    width: 149px;
}
.nav_collapsed #navigation > ul > li.top-bars ul {
	display: none;
}

#navigation > ul > li ul li.last a {border-bottom:none;}
/** **/

#footer { *width:984px; }
body.liquid #footer,
body.popup #footer { *width:auto; zoom:1; }

#footer_floater { left: 0; }

#wdn_copyright {
	*margin: 0 -12px -23px;
	*position: relative;
}
#wdn_logos { 
    *right: 24px;	
}


#wdn_navigation_bar,
.nav_collapsed #wdn_navigation_bar {
     top:auto;
}

.nav_expanded #navigation {
	padding-bottom:44px;
}
#wdn_search .search {
	color:transparent;	
}
#wdn_search_form input.search {
    color: transparent;
    text-transform: capitalize;
}

/* These are the additional, easier-to-use, selectors */
a.external, a.map, a.email, a.vcard, a.pdf, a.audio, a.image, a.document, a.html, a.video, a.calendar, a.presentation, a.spreadsheet, a.zip, a.feed, a.script,
/* CSS attribute rules */
a[href $='.mov'], a[href $='.wmv'], a[href $='.mp4'], a[href $='.m4v'], a[href $='.zip'], a[href *='.ppt'], a[href *='.pps'], a[href *='.xls'], a[href $='.pdf'], a[href^="mailto:"], a[href^="http://maps.google.com"],
/* These are the selectors based on mime-type */
a.mail-message-new, a.text-vcard, a.application-pdf, a.audio-x-generic, a.image-x-generic, a.text-html, a.text-x-script, a.video-x-generic, a.x-office-calendar, a.x-office-document,
a.x-office-document-template, a.x-office-presentation, a.x-office-presentation-template, a.x-office-spreadsheet, a.x-office-spreadsheet-template, a.application-msword,
a.application-vnd-ms-excel, a.application-vnd-ms-powerpoint, a.application-zip, a.application-map
{zoom:1}

